# test-task-string-URL-pytest

./: README.md  pyproject.toml  pytest.ini  task - python junior.md
task_string_url_pytest/: main.py
task_string_url_pytest/functions_for_check/: __init__.py  functions.py
tests/unit/: test_check_server_conection.py  test_check_url.py
