[tool.poetry]
name = "test-task-string-url-pytest"
version = "0.1.0"
description = ""
authors = ["Evgenii Sapozhkov <sapozhkovevgenii@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_string_url_pytest"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
